--- a/sass/utilities/_loader.scss
+++ b/sass/utilities/_loader.scss
@@ -29,4 +29,12 @@
 			opacity: 0;
 		}
 	}
+
+	@media screen and (max-width: $breakpoint__sm) {
+		&__inner {
+			span {
+				font-size: 2.5rem;
+			}
+		}
+	}
 }
